--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,11 @@
 		    <artifactId>http-request</artifactId>
 		    <version>6.0</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
